--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="enjoyful_interface">Simple and user-friendly interface</string>
     <string name="discounts_at_every_turn">Discounts at every turn!</string>
     <string name="continue_">Continue</string>
+    <string name="show_where_i_am">Show where I am</string>
+    <string name="grant_permission">Grant permission</string>
 </resources>
