--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -9,4 +9,9 @@
     <string name="grant_permission">Предоставить разрешение</string>
     <string name="location_permission_instruction">Необходимо определить ваше местоположение, чтобы показать магазины со скидками рядом с вами.\nПожалуйста, предоставьте разрешение.</string>
     <string name="notification_permission_instruction">Пожалуйста разрешите отправку уведомления, чтобы не пропустить важные события.</string>
+    <string name="unknown">Неизвестно</string>
+    <string name="no">Нет</string>
+    <string name="yes">Да</string>
+    <string name="your_location">"Ваше местоположение: "</string>
+    <string name="search">Поиск</string>
 </resources>
